resolved code smells